[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://City/Tree.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Houses/House.tscn" type="PackedScene" id=3]
[ext_resource path="res://Systems/TaskManager.gd" type="Script" id=4]
[ext_resource path="res://NPCs/Group.tscn" type="PackedScene" id=5]
[ext_resource path="res://Systems/MusicManager.gd" type="Script" id=6]
[ext_resource path="res://Audio/100BPM house free.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/UI/input_button.png" type="Texture" id=8]
[ext_resource path="res://UI/BeatIndicatorUI.gd" type="Script" id=9]
[ext_resource path="res://World.gd" type="Script" id=10]
[ext_resource path="res://Systems/InputManager.gd" type="Script" id=11]
[ext_resource path="res://UI/InputChainUI/InputChain.gd" type="Script" id=12]
[ext_resource path="res://Systems/Crowd.gd" type="Script" id=13]
[ext_resource path="res://Font/UIBig.tres" type="DynamicFont" id=14]
[ext_resource path="res://Font/UISmall.tres" type="DynamicFont" id=15]
[ext_resource path="res://GridMaps/StreetNew.meshlib" type="MeshLibrary" id=16]
[ext_resource path="res://UI/CrowdSize.gd" type="Script" id=17]
[ext_resource path="res://Sprites/UI/white.png" type="Texture" id=18]
[ext_resource path="res://Sprites/UI/gray.png" type="Texture" id=19]
[ext_resource path="res://UI/SpiritMeter.gd" type="Script" id=20]

[sub_resource type="Environment" id=1]
background_mode = 3
background_color = Color( 0.635294, 0.607843, 0.537255, 1 )
dof_blur_far_enabled = true
dof_blur_far_distance = 6.0
dof_blur_far_amount = 0.15
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 4.0
dof_blur_near_transition = 0.32
dof_blur_near_amount = 0.15
dof_blur_near_quality = 2

[node name="World" type="Spatial"]
script = ExtResource( 10 )

[node name="InputManager" type="Spatial" parent="."]
script = ExtResource( 11 )
beat_manager_node = NodePath("../BeatManager")

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.000177383, 0.0352115, 0.858981 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.703792, -0.443073, 0.555305, 0, 0.781673, 0.623689, -0.710407, -0.438947, 0.550135, 0, 1.46664, 2.28217 )
light_energy = 1.16
shadow_enabled = true
shadow_bias = 0.01

[node name="Trees" type="Spatial" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16682, 0, -0.310476 )

[node name="Tree19" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.16682, 0, -1.74723 )

[node name="Tree2" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44673, 0, -0.386705 )

[node name="Tree18" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44673, 0, -1.75836 )

[node name="Tree3" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44615, 0, 2.76009 )

[node name="Tree11" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.95259, 0, 3.61292 )

[node name="Tree12" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.86317, -0.00897837, 3.23467 )

[node name="Tree15" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.102355, 0, 3.27503 )

[node name="Tree16" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15771, 0, 2.93141 )

[node name="Tree17" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.343904, 0, 2.31205 )

[node name="Tree13" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.816257, 0, 3.34432 )

[node name="Tree14" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.66194, -0.00626564, 3.63132 )

[node name="Tree7" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.12163, 0, -4.68467 )

[node name="Tree8" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.173404, 0, -4.68467 )

[node name="Tree9" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24284, 0, -4.68467 )

[node name="Tree10" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.28786, 0, -4.68467 )

[node name="Tree4" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.06289, 0, 2.00066 )

[node name="Tree5" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.96842, 0, 2.31012 )

[node name="Tree20" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.08244, 0, -0.989331 )

[node name="Tree21" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.9715, 0, -1.1804 )

[node name="Tree6" parent="Trees" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.73449, 0, -0.737139 )

[node name="Crowd" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0147533, 0.0740387, 0.647541 )
script = ExtResource( 13 )

[node name="TaskTimer" type="Timer" parent="Crowd"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Houses" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0536704, -0.315549 )

[node name="House" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -0.557614, 0.495138, 0.841704 )

[node name="House2" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 2.73469, 0.495138, 0.874582 )

[node name="House3" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -4.19944, 0.495138, 0.809847 )

[node name="House4" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -4.00671, 0.495138, 4.68124 )

[node name="House5" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 3.91135, 0.489737, 4.74972 )

[node name="House6" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 4.31219, 0.495138, -3.26908 )

[node name="House9" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 9.87233, 0.495138, -3.57797 )

[node name="House10" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 9.93667, 0.495138, 4.78693 )

[node name="House11" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -4.71418, 0.495138, -3.17803 )

[node name="House12" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -13.0801, 0.495138, -4.58548 )

[node name="House7" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1.58774, 0.495138, -3.15393 )

[node name="House8" parent="Houses" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -2.11276, 0.495138, -3.21453 )

[node name="Bystanders" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0808756, 0.852619 )

[node name="Group" parent="Bystanders" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.50197, 0.0165801, 0.0800235 )
boids_n = 2

[node name="Group3" parent="Bystanders" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.86797, 0.0165801, 0.0800235 )
boids_n = 3
task_size = 6

[node name="Group4" parent="Bystanders" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.472227, 0.0165801, 1.69408 )

[node name="Group2" parent="Bystanders" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.60166, 0.0165801, -1.29097 )
boids_n = 2

[node name="BeatManager" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BeatManager"]
stream = ExtResource( 7 )
volume_db = -10.097

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="BeatIndicatorUI" type="Control" parent="UILayer"]
anchor_right = 1.0
margin_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
beat_manager_node = NodePath("../../BeatManager")

[node name="TextureRect" type="TextureRect" parent="UILayer/BeatIndicatorUI"]
margin_left = 72.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 96.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputChainUI" type="Node2D" parent="UILayer"]
position = Vector2( 104, 168 )
script = ExtResource( 12 )
input_manager_node = NodePath("../../InputManager")

[node name="NotificationUI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tasks" type="Control" parent="UILayer/NotificationUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Messages" type="Control" parent="UILayer/NotificationUI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrowdSize" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/CrowdSize"]
margin_left = 96.0
margin_top = 936.0
margin_right = 296.0
margin_bottom = 986.0
custom_fonts/font = ExtResource( 15 )
text = "Protesters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UILayer/CrowdSize"]
margin_left = 168.0
margin_top = 968.0
margin_right = 218.0
margin_bottom = 1018.0
custom_fonts/font = ExtResource( 14 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpiritMeter" type="Control" parent="UILayer"]
margin_left = 632.0
margin_top = 952.0
margin_right = 672.0
margin_bottom = 992.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="UILayer/SpiritMeter"]
margin_left = 24.0
margin_top = 16.0
margin_right = 724.0
margin_bottom = 66.0
rect_min_size = Vector2( 700, 50 )
value = 50.0
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 18 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UILayer/SpiritMeter"]
margin_left = 312.0
margin_top = -16.0
margin_right = 432.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 15 )
text = "Spirit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh_library = ExtResource( 16 )
data = {
"cells": PoolIntArray( 0, 0, -1609957375, 1, 0, 655361, 2, 0, 655361, 3, 0, 655362, 4, 0, 3, 5, 0, -1610612733, 6, 0, 3, 7, 0, -1610612733, 8, 0, 3, 9, 0, 3, 65526, 0, 3, 65527, 0, 3, 65528, 0, 3, 65529, 0, 3, 65530, 0, 3, 65531, 0, 3, 65532, 0, 1048578, 65533, 0, -1609957375, 65534, 0, 537526273, 65535, 0, 655361, 0, 1, 4, 1, 1, 3, 2, 1, 3, 3, 1, 1048577, 4, 1, 3, 5, 1, -1610612733, 6, 1, 3, 7, 1, 3, 8, 1, 3, 9, 1, 3, 65526, 1, 3, 65527, 1, 3, 65528, 1, 3, 65529, 1, -1610612733, 65530, 1, 3, 65531, 1, 3, 65532, 1, 1048577, 65533, 1, -1610612733, 65534, 1, 3, 65535, 1, 4, 0, 2, 655361, 1, 2, 655361, 2, 2, 655361, 3, 2, 655362, 4, 2, 3, 5, 2, 3, 6, 2, 3, 7, 2, 3, 8, 2, 3, 9, 2, 536870915, 65527, 2, -1610612733, 65528, 2, -1610612733, 65529, 2, 3, 65530, 2, 3, 65531, 2, -1610612733, 65532, 2, -1609957369, 65533, 2, 655366, 65534, 2, 655361, 65535, 2, 655361, 0, 3, 3, 1, 3, -1610612733, 2, 3, 3, 3, 3, 3, 4, 3, 3, 5, 3, 3, 6, 3, 536870915, 7, 3, 3, 8, 3, 3, 65527, 3, 3, 65528, 3, 3, 65529, 3, 3, 65530, 3, 3, 65531, 3, 536870915, 65532, 3, 3, 65533, 3, 3, 65534, 3, 3, 65535, 3, -1610612733, 0, 4, -1610612733, 1, 4, 3, 2, 4, 3, 3, 4, 3, 4, 4, -1610612733, 5, 4, 3, 6, 4, 3, 7, 4, 3, 8, 4, 3, 65527, 4, 3, 65528, 4, 3, 65529, 4, 3, 65530, 4, 3, 65531, 4, -1610612733, 65532, 4, 3, 65533, 4, 3, 65534, 4, 3, 65535, 4, 3, 0, 5, 3, 1, 5, 3, 2, 5, 3, 3, 5, 3, 4, 5, 3, 5, 5, 3, 6, 5, 3, 7, 5, 3, 8, 5, 3, 65531, 5, 3, 65532, 5, -1610612733, 65533, 5, -1610612733, 65534, 5, 3, 65535, 5, 3, 65531, 6, 3, 65532, 6, 3, 65529, 65528, 3, 65530, 65528, 3, 65531, 65528, 3, 0, 65529, -1610612733, 1, 65529, 3, 2, 65529, 3, 3, 65529, 3, 4, 65529, 3, 5, 65529, -1610612733, 6, 65529, 3, 7, 65529, -1610612733, 8, 65529, 3, 65527, 65529, 3, 65528, 65529, 3, 65529, 65529, 3, 65530, 65529, 3, 65531, 65529, 536870915, 65532, 65529, 3, 65533, 65529, 3, 65534, 65529, 3, 65535, 65529, 3, 0, 65530, 3, 1, 65530, 536870915, 2, 65530, 536870915, 3, 65530, 3, 4, 65530, 536870915, 5, 65530, 3, 6, 65530, -1610612733, 7, 65530, 536870915, 8, 65530, -1610612733, 9, 65530, 536870915, 65526, 65530, 3, 65527, 65530, 536870915, 65528, 65530, 3, 65529, 65530, 3, 65530, 65530, -1610612733, 65531, 65530, 3, 65532, 65530, 3, 65533, 65530, 3, 65534, 65530, -1610612733, 65535, 65530, 3, 0, 65531, 3, 1, 65531, 3, 2, 65531, 3, 3, 65531, 3, 4, 65531, 536870915, 5, 65531, 536870915, 6, 65531, 3, 7, 65531, -1610612733, 8, 65531, 536870915, 9, 65531, 3, 10, 65531, 536870915, 65526, 65531, 3, 65527, 65531, 3, 65528, 65531, 3, 65529, 65531, 3, 65530, 65531, 536870915, 65531, 65531, 3, 65532, 65531, -1610612733, 65533, 65531, 3, 65534, 65531, 3, 65535, 65531, 3, 0, 65532, 3, 1, 65532, 3, 2, 65532, 3, 3, 65532, 3, 4, 65532, 3, 5, 65532, -1610612733, 6, 65532, 3, 7, 65532, 3, 8, 65532, 536870915, 9, 65532, -1610612733, 10, 65532, 3, 65526, 65532, 3, 65527, 65532, 3, 65528, 65532, 3, 65529, 65532, 3, 65530, 65532, 3, 65531, 65532, 3, 65532, 65532, 3, 65533, 65532, 3, 65534, 65532, 3, 65535, 65532, 3, 0, 65533, 3, 1, 65533, 3, 2, 65533, 536870915, 3, 65533, 1441793, 4, 65533, 536870915, 5, 65533, 3, 6, 65533, 536870915, 7, 65533, 3, 8, 65533, 3, 9, 65533, 3, 10, 65533, 3, 65526, 65533, 536870915, 65527, 65533, 3, 65528, 65533, 3, 65529, 65533, 3, 65530, 65533, 3, 65531, 65533, 3, 65532, 65533, -1609170943, 65533, 65533, -1610612733, 65534, 65533, 3, 65535, 65533, 3, 0, 65534, 1, 1, 65534, 1, 2, 65534, 1, 3, 65534, 1048578, 4, 65534, 3, 5, 65534, 3, 6, 65534, 536870915, 7, 65534, 3, 8, 65534, 3, 9, 65534, 3, 65526, 65534, -1610612733, 65527, 65534, 3, 65528, 65534, 3, 65529, 65534, 3, 65530, 65534, 3, 65531, 65534, 3, 65532, 65534, 537919490, 65533, 65534, 1, 65534, 65534, 1, 65535, 65534, 536870913, 0, 65535, -1610612733, 1, 65535, 3, 2, 65535, 3, 3, 65535, 1048577, 4, 65535, 3, 5, 65535, 1073741827, 6, 65535, 3, 7, 65535, 3, 8, 65535, 3, 9, 65535, 3, 65526, 65535, 3, 65527, 65535, 3, 65528, 65535, 3, 65529, 65535, 3, 65530, 65535, 3, 65531, 65535, 3, 65532, 65535, 1048577, 65533, 65535, 3, 65534, 65535, 3, 65535, 65535, 3 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="TaskManager" type="Spatial" parent="."]
script = ExtResource( 4 )
beat_manager_node = NodePath("../BeatManager")

[node name="Protest" type="Spatial" parent="."]
[connection signal="timeout" from="Crowd/TaskTimer" to="Crowd" method="_on_TaskTimer_timeout"]
[connection signal="finished" from="BeatManager/AudioStreamPlayer" to="BeatManager" method="_on_AudioStreamPlayer_finished"]
